real-project/blender/test-function/classification_results/non_compilable/test_36.cpp.log
/home/anonymous/compare-order/real-project/blender/test-function/test_36.cpp:18:23: error: use of undeclared identifier 'smart_uv_project_area_ignore'
   18 |   if (!((tf_a->area > smart_uv_project_area_ignore) ||
      |                       ^
/home/anonymous/compare-order/real-project/blender/test-function/test_36.cpp:19:23: error: use of undeclared identifier 'smart_uv_project_area_ignore'
   19 |         (tf_b->area > smart_uv_project_area_ignore)))
      |                       ^
2 errors generated.
